--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -4,13 +4,13 @@
           <div class="row">
                    <div class="col-md-12">
                          <ul class="menu_footer">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a class="active" href="about.html">About</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a class=" <%= link==='index' && 'active' %> " href="/">Home</a></li>
+                            <li><a class=" <%= link==='about' && 'active' %> " href="/about">About</a></li>
+                            <li><a class=" <%= link==='services' && 'active' %> " href="/services">Services</a></li>
+                            <li><a class=" <%= link==='photos' && 'active' %> " href="/photos">Photos</a></li>
+                            <li><a class=" <%= link==='projects' && 'active' %> " href="/projects">Projects</a></li>
+                            <li><a class=" <%= link==='blog' && 'active' %> " href="/blog">Blog</a></li>
+                            <li><a class=" <%= link==='contact' && 'active' %> " href="/contact">Contact</a></li>
                          </ul>
                    </div>
                    <div class="col-md-12">
