Comment line is added.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,7 @@
                   <h2>Login</h2>
                 </div>
               </div>
+              <!-- router dashboard page but firstly have a token or not token -->
               <div class="col-md-8 offset-md-2">
                 <form id="request" class="main_form" action="users/login" method="POST">
                   <div class="row">
