--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,6 +20,7 @@
                   <h2>Register</h2>
                 </div>
               </div>
+              <!-- new user register place  -->
               <div class="col-md-8 offset-md-2">
                 <form id="request" class="main_form" action="users/register" method="POST">
                   <div class="row">
@@ -53,6 +54,8 @@
           </div>
         </div>
       <!-- end contact -->
+
+      <!-- controller obey register rule  js code   -->
       <script>
         const form = document.querySelector('form')
         const emailError = document.querySelector('#email')
