--- a/views/users.ejs
+++ b/views/users.ejs
@@ -16,7 +16,7 @@
                <div class="row">
                   <div class="col-md-12">
                      <div class="titlepage text_align_center">
-                        <h2>Our Blog</h2>
+                        <h2>FOLLOWERS</h2>
                      </div>
                   </div>
 
