--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -1,44 +1,54 @@
 <%- include("partials/_headers") %>
-  <!-- body -->
+   <!-- body -->
 
-  <body class="main-layout inner_page">
-    <!-- loader  -->
-    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
-    </div>
-    <!-- end loader -->
-    <%- include("partials/_menu") %>
+   <body class="main-layout inner_page">
+      <!-- loader  -->
+      <div class="loader_bg">
+         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      </div>
+      <!-- end loader -->
+      <%- include("partials/_menu") %>
 
-      <!-- end header inner -->
-      <!-- about -->
-      <div class="about">
-        <div class="container">
-           <div class="row">
-              <div class="col-md-6">
-                 <div class="titlepage text_align_left">
-                    <h3 style="font-size:24px !important ;">
-                       <%= photo.name %>
-                    </h3>
-                    <p>
-                       <%= photo.description %>
-                    </p>
-                    <a class="read_more" href="/users/<%= photo.user._id %>">
-                     Artist: <%= photo.user.username %></a>
-                 </div>
-              </div>
-              <div class="col-md-6">
-                 <div class="about_img">
-                    <figure><img src="<%= photo.url %>" alt="<%= photo.name %>" /></figure>
-                 </div>
-              </div>
-           </div>
-        </div>
-     </div>
-      <!-- end about -->
-      <!-- end footer -->
-      <%- include("partials/_footer") %>
+         <!-- end header inner -->
+         <!-- about -->
+         <div class="about">
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-6">
+                     <div class="titlepage text_align_left">
+                        <h3 style="font-size:24px !important ;">
+                           <%= photo.name %>
+                        </h3>
+                        <p>
+                           <%= photo.description %>
+                        </p>
+                        <a class="read_more" href="/users/<%= photo.user._id %>">
+                           Artist: <%= photo.user.username %>
+                        </a>
+                        <div style="margin-top: 30px;">
+                           <ul style="display: flex; justify-content: space-between;">
+                              <li><a style="min-width: 266px;" href="#" class="read_more">Update</a></li>
+                              <li><a style="min-width: 266px;" href="/photos/<%= photo._id %>/?_method=DELETE" class="read_more"
+                                 onclick="return confirm('Do you want to delete the photo')"
+                                 >Delete</a></li>
+                           </ul>
+                        </div>
+
+                     </div>
+                  </div>
+                  <div class="col-md-6">
+                     <div class="about_img">
+                        <figure><img src="<%= photo.url %>" alt="<%= photo.name %>" /></figure>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- end about -->
+         <!-- end footer -->
+         <%- include("partials/_footer") %>
 
 
-  </body>
+   </body>
 
-  </html>
+   </html>
