--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -6,10 +6,8 @@
                          <ul class="menu_footer">
                             <li><a class=" <%= link==='index' && 'active' %> " href="/">Home</a></li>
                             <li><a class=" <%= link==='about' && 'active' %> " href="/about">About</a></li>
-                            <li><a class=" <%= link==='services' && 'active' %> " href="/services">Services</a></li>
                             <li><a class=" <%= link==='photos' && 'active' %> " href="/photos">Photos</a></li>
-                            <li><a class=" <%= link==='projects' && 'active' %> " href="/projects">Projects</a></li>
-                            <li><a class=" <%= link==='blog' && 'active' %> " href="/blog">Blog</a></li>
+                            <li><a class=" <%= link==='users' && 'active' %> " href="/users">Users</a></li>
                             <li><a class=" <%= link==='contact' && 'active' %> " href="/contact">Contact</a></li>
                          </ul>
                    </div>
