--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -25,6 +25,8 @@
                         <a class="read_more" href="/users/<%= photo.user._id %>">
                            Artist: <%= photo.user.username %>
                         </a>
+
+                        <% if(isOwner){ %>
                         <div style="margin-top: 30px;">
                            <ul style="display: flex; justify-content: space-between;">
                               <li><button style="min-width: 266px;" class="read_more" data-toggle="modal"
@@ -37,7 +39,7 @@
                                     onclick="return confirm('Do you want to delete the photo')">Delete</a></li>
                            </ul>
                         </div>
-
+                        <% } %>
                      </div>
                   </div>
                   <div class="col-md-6">
