--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -32,23 +32,14 @@
 
 
 
-                     <!-- <li><a href="services.html">Services</a></li>
-                     <li><a href="projects.html">Projects</a></li>
-                     <li><a href="blog.html">Blog</a></li>
-                     <li><a href="contact.html">Contact</a></li> -->
+                     
                   </ul>
-                  <!-- <button class="nav-toggler">
+                  <button style="position: relative; top: -40px;" class="nav-toggler">
                      <span></span>
-                  </button> -->
+                  </button>
                </nav>
             </div>
          </div>
-         <!-- <div class=" col-md-2 di_none">
-            <ul class="email text_align_right">
-               <li><a href="Javascript:void(0)">Login</a></li>
-               <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-            </ul>
-         </div> -->
       </div>
    </div>
 </header>
